# nexp32-rs

./: .gitignore  COMPILATION.md  IMPLEMENTATION_SUMMARY.md  README.md  flake.nix  module.nix  overlay.nix
data/: esp32.json
example/: .gitignore  Cargo.toml  README.md  rust-analyzer.toml
example/.cargo/: config.toml
example/hello_world/: Cargo.toml
example/ttgo_blink/: Cargo.toml
example/ttgo_button/: Cargo.toml
example/ttgo_chatterbox/: Cargo.toml  wokwi.toml
example/ttgo_chatterbox2/: Cargo.toml
example/ttgo_gps/: Cargo.toml
example/ttgo_rgb/: Cargo.toml
lib/: combine.nix  default.nix  esp-idf.nix  espup.nix  llvm-esp.nix  mk-toolchain.nix  riscv-toolchain.nix  rust-xtensa.nix  shells.nix  xtensa-toolchain.nix
pkgs/: esp-config.nix  xtensa-gcc.nix
scripts/: get-hashes.sh  setup-toolchain.sh
