[package]
edition = "2024"
name = "ttgo_chatterbox2"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "ttgo_chatterbox2"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
esp-alloc = "0.9.0"

critical-section = "1.2.0"
embedded-io-async = "0.7.0"

embassy-net = { version = "0.8.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
esp-println = { version = "0.13.0", features = ["esp32"] }
esp-radio = { version = "0.17.0", features = ["esp32", "wifi"] }
heapless = "0.8.0"
picoserve = { version = "0.18.0", features = ["embassy", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
static_cell = "2.1.1"
